# bootlegrs

./: Cargo.toml  README.md  build.rs  justfile
crates/apps/: Cargo.toml  README.md
crates/apps/completions/: Cargo.toml
crates/apps/completions/src/: lib.rs
crates/apps/config/: Cargo.toml
crates/apps/config/src/: lib.rs
crates/apps/env/: TODO.md
crates/apps/fmt/: TODO.md
crates/apps/gen_schema/: Cargo.toml
crates/apps/gen_schema/src/: lib.rs
crates/apps/install/: TODO.md
crates/apps/list/: TODO.md
crates/apps/src/: lib.rs  schema.rs
crates/bootleg/: Cargo.toml
crates/bootleg/src/: main.rs
crates/clap/verbosity/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/args/: Cargo.toml
crates/cli/args/src/: lib.rs
crates/cli/commands/: Cargo.toml
crates/cli/commands/src/: lib.rs
crates/cli/src/: args.rs
crates/completions/: Cargo.toml
crates/completions/src/: completions.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  mod.rs
crates/schema/: Cargo.toml  terms.md
crates/schema/src/: attestations.rs  config.rs  dependencies.rs  lib.rs  licenses.rs  recipe.rs  speakeasy.rs
crates/tui/: TODO.md
crates/utils/dirs/: Cargo.toml  README.md
docs/: book.toml
src/: cmd.rs  main.rs
src/app/: completions.rs  mod.rs
src/apps/: completions.rs  schema.rs
src/cli/: args.rs  commands.rs
src/config/: lib.rs  mod.rs  xdg.rs
src/schema/: attestations.rs  dependencies.rs  lib.rs  mod.rs  recipe.rs  rotgut.rs  still.rs
