[package]
name = "bootleg"
version = "0.1.0"
edition.workspace = true
description = "Experimental reimplementation of homebrew in rust."
license-file = "./LICENSE"
publish.workspace = true

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.58"
clap_complete_nushell = "4.5.8"
clap-i18n-richformatter = "0.1.4"
# clap-verbosity-flag = { path = "../../clap/verbosity" }
cli = { path = "../cli" }
completions = { path = "../apps/completions" }
figment = { version = "0.10.19", features = [
  "env",
  "json",
  "serde_json",
  "serde_yaml",
  "test",
  "toml",
  "yaml",
] }
gen_schema = { path = "../apps/gen_schema" }
schema = { path = "../schema" }
schemars = "1.0.4"
serde = "1.0.225"
serde_json = "1.0.145"
serde_yaml = "0.9.34"
clap_builder = "4.5.48"
